2006-01-08  Mikhael Goikhman  <migo@homemail.com>

	* Makefile.am
	restore requirement of automake-1.4; 1.8 is too new even for my system

2006-01-07  Dominik Vogt  <dominik.vogt@gmx.de>

	* configure.in:
	* configure.ac:
	renamed configure.in to configure.ac

	* acinclude.m4:
	some updates for new autoconf/automake versions

	* configure.in:
	* acconfig.h:
	removed acconfig.h

	* configure.in:
	require autoconf-2.53 or later

	* Makefile.am (AUTOMAKE_OPTIONS):
	require automake-1.8 or later

	* configure.in:
	check for X library path before X library checks
	removed obsolete C++ compiler check
	removed duplicate type size checks
	replaced M4 comment ("dnl") with shell comment ("#") in many places

	* acinclude.m4:
	fixed aclocal warnings

2006-01-01  Viktor Griph  <griph@dd.chalmers.se>

	* fvwm/style.c (style_parse_button_style):
	corrected typo in error message, and made errorous buttons not apply
	(style_parse_one_style_option):
	changed NoButton to use style_parse_button_style

2005-12-23  Viktor Griph  <griph@dd.chalmers.se>

	* libs/Fft.h:
	new fix for incompatible pointer type warning with gcc 3.4.

2005-12-21  Viktor Griph  <griph@dd.chalmers.se>

	* NEWS:
	* AUTHORS:
	* fvwm/menuitem.c:
	* fvwm/menustyle.h:
	* fvwm/fvwm.1.in:
	commited patch by Malcolm Still adding TrianglesUseFore MenuStyle
	option.

2005-12-07  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/fvwm.1.in:
	corrected typos

2005-11-27  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/frame.c (frame_free_move_resize_args):
	fixed drawing of transparent decorations or when using lazy shading
	during resize

2005-11-26  Dominik Vogt  <dominik.vogt@gmx.de>

	* configure.in:
	* libs/fvwmsignal.c:
	* libs/Graphics.c:
	c89 fixes

	* fvwm/ewmh_names.c:
	* libs/CombineChars.c:
	* libs/FGettext.c:
	* libs/FScreen.c:
	* libs/FTips.c:
	* libs/Flocale.c:
	* libs/Parse.c:
	* libs/PictureUtils.c:
	* libs/System.c:
	* libs/XError.c:
	* libs/alloca.c:
	* libs/envvar.c:
	* libs/safemalloc.c:
	* libs/strdup.c: