@@ -1,3 +1,8 @@
+2006-01-08  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* acinclude.m4 (smr_SWITCH):
+	updated
+
 2006-01-08  Mikhael Goikhman  <migo@homemail.com>
 
 	* Makefile.am
